--- a/aic/res/popularity.html
+++ b/aic/res/popularity.html
@@ -3,34 +3,25 @@
       <tr>
         <th scope="col">Field</th>
         <th scope="col">Value</th>
-        <th scope="col">Type</th>
-        <th scope="col">Range of Acceptable Values</th>
-        <th scope="col">Description</th>
+        <th scope="col">Acceptable Values</th>
       </tr>
     </thead>
     <tbody>
         <tr>
-            <td>CriticalPopularity</td>
-            <td><input id="CriticalPopularity" type="number" min=0 max=10000 placeholder="Enter value"></td>
-            <td>Integer</td>
+            <td>CriticalPopularity <i class="far fa-question-circle" data-toggle="tooltip" data-placement="right" title="If popularity drops below this value the AI sells more stuff than usual to get money. 10000 is 100 popularity"></i></td>
+            <td><input id="CriticalPopularity" type="number" min=0 max=10000 placeholder="Enter value "></td>
             <td>0 to 10000</td>
-            <td>If popularity drops below this value the AI sells more stuff than usual to get money. 10000 is 100 popularity</td>
         </tr>
         <tr>
-            <td>LowestPopularity</td>
-            <td><input id="LowestPopularity" type="number" min=0 max=10000 placeholder="Enter value"></td>
-            <td>Integer</td>
+            <td>LowestPopularity <i class="far fa-question-circle" data-toggle="tooltip" data-placement="right" title="If popularity drops below this value the AI sets taxes (in steps) to TaxesMin. 10000 is 100 popularity"></i></td>
+            <td><input id="LowestPopularity" type="number" min=0 max=10000 placeholder="Enter value "></td>
             <td>0 to 10000</td>
-            <td>If popularity drops below this value the AI sets taxes (in steps) to TaxesMin. 10000 is 100 popularity</td>
         </tr>
         <tr>
-            <td>HighestPopularity</td>
-            <td><input id="HighestPopularity" type="number" min=0 max=10000 placeholder="Enter value"></td>
-            <td>Integer</td>
+            <td>HighestPopularity <i class="far fa-question-circle" data-toggle="tooltip" data-placement="right" title="If popularity is above this value the AI sets taxes back up until a stable 0 to -3 current popularity modifier is reached.
+                10000 is 100 popularity"></i></td>
+            <td><input id="HighestPopularity" type="number" min=0 max=10000 placeholder="Enter value "></td>
             <td>0 to 10000</td>
-            <td>If popularity is above this value the AI sets taxes back up until a stable 0 to -3 current popularity modifier is reached.
-                10000 is 100 popularity
-            </td>
         </tr>
     </tbody>
 </table>
