--- a/aic/res/uncategorized.html
+++ b/aic/res/uncategorized.html
@@ -3,124 +3,89 @@
       <tr>
         <th scope="col">Field</th>
         <th scope="col">Value</th>
-        <th scope="col">Type</th>
-        <th scope="col">Range of Acceptable Values</th>
-        <th scope="col">Description</th>
+        <th scope="col">Acceptable Values</th>
       </tr>
     </thead>
     <tbody>
         <tr>
-            <td>Unknown000</td>
+            <td>Unknown000 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown000" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown001</td>
+            <td>Unknown001 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown001" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown002</td>
+            <td>Unknown002 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown002" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown003</td>
+            <td>Unknown003 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td></td>
             <td><input id="Unknown003" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown004</td>
+            <td>Unknown004 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown004" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown005</td>
+            <td>Unknown005 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown005" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown011</td>
+            <td>Unknown011 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown011" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown040</td>
+            <td>Unknown040 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown040" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown072</td>
+            <td>Unknown072 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown072" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown073</td>
+            <td>Unknown073 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown073" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown124</td>
+            <td>Unknown124 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown124" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown129</td>
+            <td>Unknown129 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown129" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown130</td>
+            <td>Unknown130 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown130" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown132</td>
+            <td>Unknown132 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown132" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown142</td>
+            <td>Unknown142 <i class="far fa-question-circle d-none" data-toggle="tooltip" data-placement="right" title=""></i></td>
             <td><input id="Unknown142" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>No description available</td>
         </tr>
         <tr>
-            <td>Unknown161</td>
+            <td>Unknown161 <i class="far fa-question-circle" data-toggle="tooltip" data-placement="right" title="This may or may not be the number of groups the AttUnitSiegeDef split into"></i></td>
             <td><input id="Unknown161" type="number" min=0 max=2147483647 placeholder="Enter value"></td>
             <td>Integer</td>
-            <td>0 to 2<sup>31</sup> - 1</td>
-            <td>This may or may not be the number of groups the AttUnitSiegeDef split into
-            </td>
         </tr>
     </tbody>
 </table>
