--- a/features.html
+++ b/features.html
@@ -68,10 +68,31 @@
         <div id="feature-content" class="">
 
             <div id="feature-header">
-                <h4 class="text-center" id="bugfixes">Bugfixes</h4>
+                <h4 class="text-center"><span id="feature-bugfix-header">Bugfixes</span>
+                    <div id="feature-dropdown" class="dropdown show float-right">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Filter
+                        </a>
+                      
+                        <div class="feature-filter dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                            <label class="dropdown-item">
+                                <input id="feature-filter-bugfix" type="checkbox" checked>  Bugfixes
+                            </label>
+                            <label class="dropdown-item">
+                                <input id="feature-filter-ai" type="checkbox" checked>  AI Lord Behaviour Changes
+                            </label>
+                            <label class="dropdown-item">
+                                <input id="feature-filter-unit" type="checkbox" checked>  Unit Modifications
+                            </label>
+                            <label class="dropdown-item">
+                                <input id="feature-filter-misc" type="checkbox" checked>  Miscellaneous
+                            </label>
+                        </div>
+                    </div>
+                </h4>
             </div>
 
-            <div class="row">
+            <div class="row feature-bugfix">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Fire ballistas shoot monks and tunnelers</h5>
@@ -95,7 +116,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-bugfix">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Fix reinforcement of defense troops</h5>
@@ -122,7 +143,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-bugfix">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Buy enough wood</h5>
@@ -146,7 +167,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-bugfix">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>No AI target change during sieges</h5>
@@ -175,7 +196,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-bugfix">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Fix AI not using laddermen if they are enclosed</h5>
@@ -200,10 +221,10 @@
 
 
             <div id="feature-header">
-                <h4 class="text-center" id="ailords">AI Lord Behaviour Changes</h4>
+                <h4 class="text-center" id="feature-ai-header">AI Lord Behaviour Changes</h4>
             </div>
 
-            <div class="row">
+            <div class="row feature-ai">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Increase of the attacking troops limit of the AIs</h5>
@@ -231,7 +252,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-ai">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Set AI attack target</h5>
@@ -258,7 +279,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-ai">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Deactivate demolishing for money of the AI lords</h5>
@@ -298,7 +319,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-ai">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Increased recruitment speed</h5>
@@ -322,10 +343,10 @@
 
 
             <div id="feature-header">
-                <h4 class="text-center" id="units">Unit Modifications</h4>
+                <h4 class="text-center" id="feature-unit-header">Unit Modifications</h4>
             </div>
 
-            <div class="row">
+            <div class="row feature-unit">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Increased armor of laddermen against ranged units</h5>
@@ -352,7 +373,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-unit">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Arabic Swordsmen destroy walls faster</h5>
@@ -381,10 +402,10 @@
 
 
             <div id="feature-header">
-                <h4 class="text-center" id="misc">Miscellaneous</h4>
+                <h4 class="text-center" id="feature-misc-header">Miscellaneous</h4>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Extend fireproof duration of extinguished buildings</h5>
@@ -406,7 +427,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Change the color of player 1</h5>
@@ -429,7 +450,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Override the Set-up Identity menu adding new features</h5>
@@ -455,7 +476,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Free trader post</h5>
@@ -480,7 +501,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Always show planned moat</h5>
@@ -510,7 +531,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Quicker responsiveness of gates towards enemies</h5>
@@ -539,7 +560,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Fix armory/marketplace weapon orders to match</h5>
@@ -562,7 +583,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row feature-misc">
                 <div class="col-lg-6">
                     <div class="card feature-title">
                         <h5>Strongholdify</h5>
